fixed margin for aligned images

--- a/web/less/frontend/modules/blog.less
+++ b/web/less/frontend/modules/blog.less
@@ -58,11 +58,13 @@ h2 a:hover {
 .alignright {
   float: right;
   margin-bottom: 10px;
+  margin-left:10px
 }
 
 .alignleft {
   float: left;
-  margin-bottom: 10px
+  margin-bottom: 10px;
+  margin-right:10px
 }
 
 .aligncenter {
